<?xml version="1.0"?>
<package>
  <name>mc_daq_ros</name>
  <version>0.0.0</version>
  <description>Measurement Computing DAQ Board ROS package</description>

  <maintainer email="colan@robo.mein.nagoya-u.ac.jp">Jacinto Colan</maintainer>
  <license>LGPLv3</license>

  <author email="colan@robo.mein.nagoya-u.ac.jp">Jacinto Colan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
