<package format="2">
  <name>openrst_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for openrst</p>
    <p>This package contains configuration data, 3D models and launch files
for openrst_description robot</p>
  </description>
  <author>Jacinto Colan</author>
  <maintainer email="colan@robo.mein.nagoya-u.ac.jp" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>